Added css sheet

--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
+<!-- https://mdbootstrap.com/md-bootstrap-cdn/ -->
+<!-- Material Design for Bootstrap fonts and icons -->
 <head>
+    <meta charset="UTF-8"/> <!---Tells web browswer what the site should be decoded in or coded in-->
     <title>Matthew Berry: Home</title>
+    <!-- Font Awesome -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+<!-- Google Fonts -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+<!-- Bootstrap core CSS -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+<!-- Material Design Bootstrap -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.12.0/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/style.css">
+
 </head>
 
 <body>
@@ -12,7 +24,7 @@
     <nav>
 
     </nav>
-    <main>
+    <main class="container">
         <article>
             <h1>Welcome</h1>
             <section>
@@ -53,7 +65,7 @@
 
 
             <hr>
-            <p><a href="Linked in: https://www.linkedin.com/in/matthewrb/">Visit me on LinkedIN</a></p>
+            <p><a href="Linked in: https://www.linkedin.com/in/matthewrb/", rel="noopener">Visit me on LinkedIN</a></p>
         </article>
         <aside>
             asdfasdfasdf
@@ -63,7 +75,14 @@
     <footer>
         <p>&copy;2020 Matthew Berry</p>
     </footer>
-
+<!-- JQuery -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<!-- Bootstrap tooltips -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
+<!-- Bootstrap core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<!-- MDB core JavaScript -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.12.0/js/mdb.min.js"></script>
 </body>
 
 </html>
