--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 <body>
     <header>
-
+        <h1></h1>
     </header>
     <nav>
 
     </nav>
-    <main class="container">
+    <main >
         <article>
-            <h1>Welcome</h1>
+            <h1>Matthew Berry: Home</h1>
             <section>
                 <h2> Matthew Berry | Section 03 | Dr. Eloe
                 </h2>
