Navigation button links added.
Lots of CS learning too

--- a/index.html
+++ b/index.html
@@ -19,14 +19,21 @@
 
 <body>
     <header>
-        <h1></h1>
+        <!--It's left-justified so I need to make the left-most item go first.-->
+        <img src="profilelinkedin.png" id="profilepicture">
+        <h1>Matthew Berry</h1>
     </header>
     <nav>
-
+        <ul class="navigationroute">
+            <li><a href="index.html" rel="noopener">Home</a></li>
+            <li><a href="contact.html" rel="noopener">Contact Me!</a></li>
+            <li><a href="mphconversion.html" rel="noopener">MPH converter</a></li>
+        </ul>
     </nav>
+
     <main >
         <article>
-            <h1>Matthew Berry: Home</h1>
+            
             <section>
                 <h2> Matthew Berry | Section 03 | Dr. Eloe
                 </h2>
