Clening up code and tweaking nav bar
Fixed errors that were a.)Flagged by the validator b.) Errors that were my own doing and c.) Errors that I had no intention of making.

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <!--It's left-justified so I need to make the left-most item go first.-->
-        <img src="profilelinkedin.png" id="profilepicture">
+        <img src="profilelinkedin.png" alt="Profile picture" id="profilepicture">
         <h1>Matthew Berry</h1>
 
     </header>
