--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header>
         <!--It's left-justified so I need to make the left-most item go first.-->
-        <img src="profilelinkedin.png" id="profilepicture">
+        <img src="profilelinkedin.png" alt="Profile picture" id="profilepicture">
         <div>
             <h1>Matthew Berry</h1>
         </div>
@@ -41,14 +41,14 @@
             <h4>Add me on the following items!</h4>
             <ol>
                 <li>
-                    <a href="https://github.com/Infraction71" rel="noopener"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/Infraction71" rel="noopener"><i class="fab fa-github"></i>Github</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/matthewrb/" rel="noopener"> <i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/matthewrb/" rel="noopener"> <i class="fab fa-linkedin"></i>Linkedin</a>
 
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/" rel="noopener"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.facebook.com/" rel="noopener"><i class="fab fa-facebook-square"></i>Facebook</a>
 
                 </li>
 
@@ -64,9 +64,9 @@
                 <h2>Hello there</h2>
                 <p>This website is used for a Webb Apps and Services class. Most of the content seen here
                     is a place holdder for later. Having a bad day? Here is a picture of a nice sunset</p>
-                <img src="sunset.jpg" id="sidepic">
+                <img src="sunset.jpg" alt="Profile picture" id="sidepic">
             </section>
-            <section>
+            <section><hr>
                 <h2>Accurate video</h2>
                 <p>We're all doing CS related things. This video is going to be relevant at some point in time of your
                     life.</p>
