--- a/mphconversion.html
+++ b/mphconversion.html
@@ -17,7 +17,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.12.0/css/mdb.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <script src="src/main.js"></script>
-
+    <script src="src/ajaxcall.js"></script>
 </head>
 
 <body> 
