--- a/test/qunit.html
+++ b/test/qunit.html
@@ -20,10 +20,13 @@
 
   <!-- include source code to be tested -->
   <script defer src="../src/main.js"></script>
+  <script defer src="../src/ajaxcall.js"></script>
+
 
 
   <!-- include test code -->
   <script defer src="main.test.js"></script>
+  <script defer src="ajaxcall.test.js"></script>
 
 
 </body>
